# pre-commit-dprint-test

./: .pre-commit-hooks.yaml  setup.cfg
