[metadata]
name = dprint_py
version = 0.45.0-1
description = pluggable and configurable code formatting platform
url = https://github.com/scop/pre-commit-dprint
# license here is for dprint proper; Python packaging related files may have others, see their contents and classifiers below
license = MIT
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    License :: OSI Approved :: MIT License
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Programming Language :: Rust
project_urls =
    Upstream = https://dprint.dev

[options]
packages =
python_requires = >=3.8
setup_requires =
    setuptools-download

[setuptools_download]
download_scripts =
    [dprint]
    group = dprint-binary
    marker = sys_platform == "darwin" and platform_machine == "arm64"
    url = https://github.com/dprint/dprint/releases/download/0.45.0/dprint-aarch64-apple-darwin.zip
    sha256 = cf23ab2785ca25f27ed5ca5127663dfe0131ae146d0b8d5159b06e0694ad74ac
    extract = zip
    extract_path = dprint
    [dprint]
    group = dprint-binary
    marker = sys_platform == "darwin" and platform_machine == "x86_64"
    url = https://github.com/dprint/dprint/releases/download/0.45.0/dprint-x86_64-apple-darwin.zip
    sha256 = 6df01e0357049ad3bc62bbd2f60c9c448bd747b650ebf20f7ab5a38cefd36b44
    extract = zip
    extract_path = dprint
    [dprint]
    group = dprint-binary
    marker = sys_platform == "linux" and platform_machine == "aarch64"
    url = https://github.com/dprint/dprint/releases/download/0.45.0/dprint-aarch64-unknown-linux-musl.zip
    sha256 = 48ba9f0910e32a66c869cffc6fd96d2d8f000ffb3d11234e71ae952f322dc849
    extract = zip
    extract_path = dprint
    [dprint]
    group = dprint-binary
    marker = sys_platform == "linux" and platform_machine == "x86_64"
    url = https://github.com/dprint/dprint/releases/download/0.45.0/dprint-x86_64-unknown-linux-musl.zip
    sha256 = 8fb959aeeb441e0038217a7973f3a8e246e7aa46b77b33ba5f5e2f38d86f531b
    extract = zip
    extract_path = dprint
    [dprint.exe]
    group = dprint-binary
    marker = sys_platform == "win32" and platform_machine == "AMD64"
    marker = sys_platform == "cygwin" and platform_machine == "x86_64"
    url = https://github.com/dprint/dprint/releases/download/0.45.0/dprint-x86_64-pc-windows-msvc.zip
    sha256 = 0a5a83b521f152cd83cfb95ef119286e472b3b43077b3ffaeb4b3297fbb52e7f
    extract = zip
    extract_path = dprint.exe
